<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:background="@drawable/titlebar_bg" android:layout_marginLeft="10dp"
	android:layout_marginRight="10dp">
	<TextView android:text="@string/shoppingCarProName"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_centerVertical="true" android:layout_marginLeft="25dp"
		android:layout_alignParentLeft="true" android:textColor="@drawable/white"/>
	<TextView android:text="@string/shoppingCarCtrl"
		android:layout_width="120dp" android:layout_height="wrap_content"
		android:layout_alignParentRight="true" android:layout_centerVertical="true"
		android:id="@+id/tvShoppingCarCtrl" android:gravity="center" 
		android:textColor="@drawable/white"/>
	<TextView android:text="@string/shoppingCarProPrice"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_toLeftOf="@id/tvShoppingCarCtrl" android:gravity="center"
		android:layout_centerVertical="true" android:layout_marginRight="40dp"
		android:textColor="@drawable/white" />
</RelativeLayout>
