<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:background="@drawable/bg"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:paddingTop="30dip"
  android:paddingLeft="30dip"
  android:paddingRight="30dip">
  
  <ImageView 
  			android:id="@+id/logoimage"
			android:layout_width="wrap_content" 
  			android:layout_height="wrap_content" 
  			android:layout_gravity="center_horizontal"
			android:src="@drawable/logo01"/>
			
<LinearLayout
		    android:id="@+id/logo_main_layout"
		    android:orientation="vertical"
			android:layout_width="wrap_content" 
  			android:layout_height="wrap_content"
  			android:layout_gravity="center"
  			android:gravity="center"
  			android:layout_marginTop="3dip"
			android:background="@drawable/login_bg">
 <!-- UserName -->	
	<LinearLayout
		    android:id="@+id/logo_uname_layout"
		    android:orientation="horizontal"
			android:layout_width="wrap_content" 
  			android:layout_height="wrap_content"
  			android:paddingLeft="10dip"
  			android:paddingRight="10dip">
    <TextView 	android:id="@+id/textaccout" 
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content" 
    			android:text="@string/account"
    			android:textColor="#000"/>
    <EditText 
			android:id="@+id/user_edit_account"
			android:background="@drawable/login_edit_selector"
			android:layout_width="fill_parent" 
    		android:layout_height="wrap_content" 
    		android:paddingLeft="8dip"
			android:singleLine="true"/>
	</LinearLayout>	
		
 <!-- Password -->
	<LinearLayout
		    android:id="@+id/logo_pswd_layout"
		    android:orientation="horizontal"
			android:layout_width="wrap_content" 
  			android:layout_height="wrap_content"
  			android:paddingLeft="10dip"
  			android:paddingRight="10dip">
    <TextView 	android:id="@+id/textpassword" 
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content" 
    			android:text="@string/password"
      		    android:textColor="#000"/>
     <EditText 
			android:id="@+id/user_edit_password"
			android:background="@drawable/login_edit_selector"
			android:layout_width="fill_parent" 
     		android:layout_height="wrap_content" 
     		android:paddingLeft="8dip"
			android:inputType="textPassword"
			android:singleLine="true"/>
    </LinearLayout>
    
    <!-- 登陆状态 -->
    <LinearLayout android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:paddingLeft="20dip">
    	<CheckBox android:id="@+id/check1" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
    	<TextView android:id="@+id/text1" android:text="@string/mindpswd" android:textColor="#000" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
    	<CheckBox android:id="@+id/check2" android:layout_marginLeft="30dip"  android:layout_height="wrap_content" android:layout_width="wrap_content"/>
    	<TextView android:id="@+id/text2" android:text="@string/autologin" android:textColor="#000" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
    </LinearLayout>
    
    <!-- 登陆 -->
    <ImageButton  
			    android:id="@+id/loginbtn" 
			    android:layout_height="wrap_content" 
			    android:layout_width="wrap_content"
			    android:background="@drawable/login_btn_selector" 
			    android:paddingLeft="20dip"
	></ImageButton>
</LinearLayout>

</LinearLayout>